docs/sf-export/sfdx-raw/objects/Convoso_List__c/Convoso_List__c.object-meta.xml
<CustomObject>
    <label>Convoso List</label>
    <nameField>
        <displayFormat>List-{0000}</displayFormat>
        <label>Convoso List Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Convoso List</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>