docs/sf-export/sfdx-raw/objects/Convoso_List__c/fields/Application_Log__c.field-meta.xml
<CustomField>
    <fullName>Application_Log__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Application Log</label>
    <referenceTo>Application_Log__c</referenceTo>
    <relationshipLabel>Convoso List</relationshipLabel>
    <relationshipName>Convoso_List</relationshipName>
    <type>Lookup</type>
</CustomField>