docs/sf-export/sfdx-raw/objects/Convoso_List__c/fields/Conversion_Failed__c.field-meta.xml
<CustomField>
    <fullName>Conversion_Failed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Conversion Failed</label>
    <type>Checkbox</type>
</CustomField>