docs/sf-export/sfdx-raw/objects/Convoso_List__c/fields/Converted_to_Lead__c.field-meta.xml
<CustomField>
    <fullName>Converted_to_Lead__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Converted to Lead</label>
    <type>Checkbox</type>
</CustomField>