docs/sf-export/sfdx-raw/objects/Convoso_List__c/fields/Converted_to_Lead_Formula__c.field-meta.xml
<CustomField>
    <fullName>Converted_to_Lead_Formula__c</fullName>
    <formula>IF( Total_Count__c &gt; 0 &amp;&amp;  (Total_Count__c == (Succes_Count__c + Data_Error__c )), true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Converted to Lead</label>
    <type>Checkbox</type>
</CustomField>