docs/sf-export/sfdx-raw/objects/Convoso_List__c/fields/Convoso_Id__c.field-meta.xml
<CustomField>
    <fullName>Convoso_Id__c</fullName>
    <label>Convoso Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>