docs/sf-export/sfdx-raw/objects/Convoso_List__c/fields/Data_Error__c.field-meta.xml
<CustomField>
    <fullName>Data_Error__c</fullName>
    <label>Data Error</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>