docs/sf-export/sfdx-raw/objects/Convoso_List__c/fields/Eligible_List__c.field-meta.xml
<CustomField>
    <fullName>Eligible_List__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Eligible List</label>
    <type>Checkbox</type>
</CustomField>