docs/sf-export/sfdx-raw/objects/Convoso_List__c/fields/Executed__c.field-meta.xml
<CustomField>
    <fullName>Executed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Executed</label>
    <type>Checkbox</type>
</CustomField>