docs/sf-export/sfdx-raw/objects/Convoso_List__c/fields/Existing_Leads__c.field-meta.xml
<CustomField>
    <fullName>Existing_Leads__c</fullName>
    <label>Existing Leads</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>