docs/sf-export/sfdx-raw/objects/Convoso_List__c/fields/Lead_Count__c.field-meta.xml
<CustomField>
    <fullName>Lead_Count__c</fullName>
    <formula>VALUE( LeadCountToday__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>