docs/sf-export/sfdx-raw/objects/Convoso_List__c/fields/LeadCountToday__c.field-meta.xml
<CustomField>
    <fullName>LeadCountToday__c</fullName>
    <label>LeadCountToday</label>
    <length>255</length>
    <type>Text</type>
</CustomField>