docs/sf-export/sfdx-raw/objects/Convoso_List__c/fields/No_of_Leads_to_Pull__c.field-meta.xml
<CustomField>
    <fullName>No_of_Leads_to_Pull__c</fullName>
    <formula>Lead_Count__c - Total_Count__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>No of Leads to Pull</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>