docs/sf-export/sfdx-raw/objects/Convoso_List__c/fields/Number_of_Leads__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Leads__c</fullName>
    <label>Number of Leads</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>