docs/sf-export/sfdx-raw/objects/Convoso_List__c/fields/Ready_To_Convert_into_Lead__c.field-meta.xml
<CustomField>
    <fullName>Ready_To_Convert_into_Lead__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ready To Convert into Lead</label>
    <type>Checkbox</type>
</CustomField>