docs/sf-export/sfdx-raw/objects/Convoso_List__c/fields/Ready_to_Process__c.field-meta.xml
<CustomField>
    <fullName>Ready_to_Process__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ready to Process</label>
    <type>Checkbox</type>
</CustomField>