docs/sf-export/sfdx-raw/objects/Convoso_List__c/fields/Succes_Count__c.field-meta.xml
<CustomField>
    <fullName>Succes_Count__c</fullName>
    <label>Succes Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>