docs/sf-export/sfdx-raw/objects/Convoso_List__c/listViews/Add_to_Five9_List.listView-meta.xml
<ListView>
    <fullName>Add_to_Five9_List</fullName>
    <columns>NAME</columns>
    <columns>Convoso_Id__c</columns>
    <columns>Eligible_List__c</columns>
    <columns>Ready_to_Process__c</columns>
    <columns>Total_Count__c</columns>
    <columns>Eligible_Leads__c</columns>
    <columns>Existing_Leads__c</columns>
    <columns>New_Leads__c</columns>
    <columns>Application_Log__c</columns>
    <columns>Succes_Count__c</columns>
    <columns>Failure_Count__c</columns>
    <columns>Executed__c</columns>
    <columns>Ready_To_Convert_into_Lead__c</columns>
    <columns>Converted_to_Lead__c</columns>
    <columns>Description__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>12/29/2023 12:00 AM</value>
    </filters>
    <filters>
        <field>Eligible_List__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Add to Five9 List</label>
</ListView>