docs/sf-export/sfdx-raw/objects/Convoso_List__c/listViews/Add_to_Five9_List_Eligible_Lists.listView-meta.xml
<ListView>
    <fullName>Add_to_Five9_List_Eligible_Lists</fullName>
    <columns>NAME</columns>
    <columns>Convoso_Id__c</columns>
    <columns>Eligible_List__c</columns>
    <columns>Total_Count__c</columns>
    <columns>Eligible_Leads__c</columns>
    <columns>Existing_Leads__c</columns>
    <columns>New_Leads__c</columns>
    <columns>Succes_Count__c</columns>
    <columns>Failure_Count__c</columns>
    <columns>Executed__c</columns>
    <columns>Converted_to_Lead__c</columns>
    <columns>Conversion_Failed__c</columns>
    <columns>Converted_to_Lead_Formula__c</columns>
    <columns>Description__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Ready_to_Process__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Eligible_List__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Add to Five9 List - Eligible Lists</label>
</ListView>