docs/sf-export/sfdx-raw/objects/Convoso_List__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Convoso_Id__c</columns>
    <columns>Application_Log__c</columns>
    <columns>Total_Count__c</columns>
    <columns>Succes_Count__c</columns>
    <columns>Failure_Count__c</columns>
    <columns>Executed__c</columns>
    <columns>Ready_To_Convert_into_Lead__c</columns>
    <columns>Converted_to_Lead__c</columns>
    <columns>Conversion_Failed__c</columns>
    <columns>Description__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>