docs/sf-export/sfdx-raw/objects/Convoso_List__c/listViews/Copy_of_Imported_at_Oct_14.listView-meta.xml
<ListView>
    <fullName>Copy_of_Imported_at_Oct_14</fullName>
    <columns>NAME</columns>
    <columns>Convoso_Id__c</columns>
    <columns>Archived__c</columns>
    <columns>Executed__c</columns>
    <columns>Total_Count__c</columns>
    <columns>Succes_Count__c</columns>
    <columns>Number_of_Leads__c</columns>
    <columns>Failure_Count__c</columns>
    <columns>Data_Error__c</columns>
    <columns>Description__c</columns>
    <columns>Converted_to_Lead_Formula__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>10/14/2023 12:00 AM</value>
    </filters>
    <label>Copy of Imported at Oct-14</label>
</ListView>