docs/sf-export/sfdx-raw/objects/Convoso_List__c/listViews/Failed_Conversion.listView-meta.xml
<ListView>
    <fullName>Failed_Conversion</fullName>
    <columns>NAME</columns>
    <columns>Convoso_Id__c</columns>
    <columns>Application_Log__c</columns>
    <columns>Total_Count__c</columns>
    <columns>Succes_Count__c</columns>
    <columns>Failure_Count__c</columns>
    <columns>Executed__c</columns>
    <columns>Converted_to_Lead_Formula__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Converted_to_Lead_Formula__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>Executed__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Failed Conversion</label>
</ListView>