docs/sf-export/sfdx-raw/objects/Convoso_List__c/listViews/Imported_at_Oct_14.listView-meta.xml
<ListView>
    <fullName>Imported_at_Oct_14</fullName>
    <columns>NAME</columns>
    <columns>LeadCountToday__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>10/14/2023 12:00 AM</value>
    </filters>
    <label>Imported at Oct-14</label>
</ListView>